--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap" rel="stylesheet">
 
 </head>
 <body>
 <header>
         <div class="name">
-            <h2>BUDO</h2>
+            <h3>BUDO</h3>
+            <h6>We create modernity</h6>
         </div>
 </header>
 <section class="Home-Section">
