--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,25 @@
         <br><br>
         <button class="btn">READ MORE</button>
     </div>
+    <div class="contact-menu">
+        <ul class="nav justify-content-center" >
+            <li class="nav-item">
+                <a class="nav-link" id="contact-now" href="#">Contact now</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Facebook</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Twitter</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="#">Instagram</a>
+            </li>
+        </ul>
+    </div>
 
 </section>
+
 
 
 
