finished all responsive

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         <button class="btn">READ MORE</button>
     </div>
     <div class="contact-menu">
-        <ul class="nav justify-content-center" >
+        <ul class="nav justify-content-center" id="ccc" >
             <li class="nav-item">
                 <a class="nav-link" id="contact-now" href="#">Contact now</a>
             </li>
